@@ -1,4 +1,5 @@
 HEAD
+    + Now variables are also provided to the setup scripts
     + Now _deployCopy returns whether the deployment was okay or not
     + Now if the setup script fails, an exception is thrown
     + Added imageNeedsUpdate and markImageUpdated methods to the virtualizers
